fix(curriculum): sidebar didn't show on mobile (#432)

--- a/components/curriculum/sidebar.css
+++ b/components/curriculum/sidebar.css
@@ -179,116 +179,6 @@
     background-color: var(--icon-critical);
   }
 
-  /* apply drawer styles only to the sizes that need them. */
-  @media (--screen-small-and-narrower) {
-    position: fixed;
-    top: var(--offset);
-    right: 0;
-    left: 0;
-
-    height: 100vh;
-    max-height: 100vh;
-
-    transform: translateX(-100%);
-
-    .sidebar-inner {
-      position: relative;
-
-      display: grid;
-
-      width: 80vw;
-      max-width: 20rem;
-      height: var(--max-height);
-      max-height: var(--max-height);
-
-      padding: 1rem;
-
-      overflow: hidden; /* animations look janky if scrollbars are present */
-      overflow: auto;
-
-      background: var(--background-primary);
-      border-right: 1px solid var(--border-primary);
-
-      transform: translateX(-100%);
-
-      transition: 0.2s linear transform;
-
-      will-change: transform;
-
-      .sidebar-inner-nav {
-        display: contents;
-        padding-bottom: 3rem;
-        mask-image: linear-gradient(
-          to bottom,
-          rgb(0 0 0) 0% calc(100% - 3rem),
-          rgb(0 0 0 / 0%) 100%
-        );
-      }
-
-      /* screen height place limit */
-      @media (height >= 44rem) {
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-
-        .sidebar-inner-nav {
-          display: block;
-          overflow: auto;
-        }
-      }
-
-      .place {
-        grid-row: 2/3;
-
-        align-self: center;
-        justify-self: center;
-
-        margin-bottom: 0;
-      }
-    }
-
-    .backdrop {
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-
-      display: flex;
-
-      width: 100%;
-
-      cursor: default;
-
-      background: rgb(0 0 0 / 30%);
-      border-radius: 0;
-
-      opacity: 0;
-
-      transition: opacity 0.2s linear;
-
-      will-change: opacity;
-    }
-
-    &.is-animating {
-      transform: translateX(0);
-    }
-
-    &.is-expanded {
-      transform: translateX(0);
-
-      /* no transition on this one, just show it. */
-
-      .sidebar-inner {
-        transform: translateX(0);
-      }
-
-      .backdrop {
-        opacity: 1;
-      }
-    }
-  }
-
   @media (--screen-small-and-narrower) {
     .place {
       display: none;
